@@ -2,6 +2,6 @@
 	Ability to merge gaim, toc, aim2, aim4 buddylists
 	Third sound option for people without soundcards who still want
 		sound events.  Make a PC Speaker Beep (^G / Char 7)
-	Save Buddy Pounces (how did I forget this) 		
+	Save Buddy Pounces (how did I forget this)
 	Save Buddy Chats
-	Support Background Colors
+	Default colors in prefs
